Remove JDK 9 workarounds etc
See gh-17778